# pentagram-ai

./: README.md  REFERENCE.md
client/: README.md  next.config.ts  package.json  pnpm-lock.yaml
client/src/app/: page.tsx
client/src/app/api/generate-image/: route.ts
client/src/app/api/generate-vito/: route.ts
client/src/components/ui/: tilt-card.tsx
server/: .env.sample  .gitignore  Dockerfile  __init__.py  app.py  boot.sh  main.py  pyproject.toml
server/app/: __init__.py
server/app/api/: __init__.py  inference.py  modals.py
server/app/lib/: __init__.py  cerebras_client.py
server/app/models/: cerebras_kwargs.py
server/scripts/: boot.sh
