[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Muhammad Bilal Khan <lofi.audit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
modal = "^0.68.44"
flask-limiter = "^3.9.2"
flask-cors = "^5.0.0"
cerebras-cloud-sdk = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
